fixed footer overflow

--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -8,11 +8,7 @@
 }
 body
 {
-
-
-
-
-
+background-color: black;
 }
 #main-div
 {
@@ -723,7 +719,38 @@ background: linear-gradient(180deg, rgba(90,246,244,1) 15%, rgba(0,11,103,1) 46%
 
 @media screen and (max-width:480px)
 {
+	#main-div
+	{
+		width:;
+		height: 100%;
+	}
+	/* video container*/
+	#vid-con
+	{
+		/* height:680px;
+		width:1900px; */
+		height:300px;
+		width: 100%;
+		object-fit: cover;
+	}
+	/*actual video*/
+	#myVideo {
+	  position: relative;
+	  top:-63px;
+	  left:0;
 
+	  width: 430px;
+	  height: 380px;
+	}
+	#con-wrapper1
+	{
+		position: relative;
+		width: 430px;
+		height:500px;
+		background: rgb(0,0,0);
+	background: linear-gradient(180deg, rgba(0,0,0,1) 8%, rgba(9,9,121,1) 83%, rgba(90,246,244,1) 100%);
+
+	}
 	#nav-div
 	{
 		position: absolute;
@@ -782,10 +809,10 @@ background: linear-gradient(180deg, rgba(90,246,244,1) 15%, rgba(0,11,103,1) 46%
 		color: white;
 		font-size: 1.2em;
 	}
-	#vid-con
+	/* #vid-con
 	{
 		height: 30%;
-	}
+	} */
 	#heading-con
 	{
 		top: 130px;
@@ -966,15 +993,7 @@ background: linear-gradient(180deg, rgba(90,246,244,1) 15%, rgba(0,11,103,1) 46%
 			font-family:arial;
 		}
 
-		#con-wrapper1
-		{
-			position: relative;
-			width: 100%;
-			height: 510px;
-			background: rgb(0,0,0);
-		background: linear-gradient(180deg, rgba(0,0,0,1) 8%, rgba(9,9,121,1) 83%, rgba(90,246,244,1) 100%);
 
-		}
 
 		/*horizontal line*/
 
@@ -1191,8 +1210,8 @@ background: linear-gradient(180deg, rgba(90,246,244,1) 15%, rgba(0,11,103,1) 46%
 		{
 			background: rgb(0,255,252);
 		background: linear-gradient(180deg, rgba(90,246,244,1) 15%, rgba(0,11,103,1) 46%, rgba(0,0,0,1) 83%);
-			width: 100%;
-			height: 10%;
+			width: 430px;
+			height:100px;
 		}
 
 		/* footer starts */
@@ -1203,7 +1222,7 @@ background: linear-gradient(180deg, rgba(90,246,244,1) 15%, rgba(0,11,103,1) 46%
 			position: relative;
 			border-radius: 80%;
 			left:0px;
-			top:60px;
+			top:80px;
 			width: 30px;
 			height: 20px;
 		}
@@ -1325,11 +1344,11 @@ background: linear-gradient(180deg, rgba(90,246,244,1) 15%, rgba(0,11,103,1) 46%
 		}
 		#s-icon-div
 		{
-			position: absolute;
+			position: relative;
 			width: 120px;
 			height: 20px;
 			left:60%;
-			top:788px;
+			top:30px;
 		}
 
 		/*4 images div*/
